# octl

./: .gitignore  pyproject.toml
.github/workflows/: publish.yml
src/octl/: __init__.py  cli.py  client.py  context.py  mcp_server.py
