[project]
name = "octl"
version = "0.1.2"
description = "Agent-friendly CLI for controlling OpenCode server"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "3w4e" }]
keywords = ["opencode", "cli", "agent", "coding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.28",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
octl = "octl.cli:main"

[project.urls]
Homepage = "https://github.com/3w4e/octl"
Repository = "https://github.com/3w4e/octl"
Issues = "https://github.com/3w4e/octl/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/octl"]
